# LogSim

./: .gitignore  CHANGELOG.md  MANIFEST.in  Pypi.md  README.md  architecture.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-docker.yml
deployment/: README.md
docs/: EXAMPLES_TESTING.md  README.md  api_reference.md  integration_guide.md  quickstart.md
evaluation/: IMPLEMENTATION_STATUS.md  README_BENCHMARKS.md  run_comprehensive_benchmarks.py  run_verbose_evaluation.py  test_comprehensive_benchmarks.py
evaluation/compressed/: apache_test.lsc  healthapp_test.lsc  hpc_test.lsc  linux_test.lsc  mac_test.lsc  openstack_test.lsc  proxifier_test.lsc  zookeeper_test.lsc
evaluation/results/: evaluation_results_2025-11-28_14-21-44.json  evaluation_results_2025-11-28_14-21-44.md  evaluation_results_latest.md
examples/: 01_basic_compression.py  02_query_compressed_logs.py  03_streaming_large_files.py  04_custom_semantic_types.py  05_schema_extraction_only.py  06_batch_processing.py  07_flask_api.py  08_fastapi_service.py  09_log_rotation_handler.py  README.md
logpress/: __init__.py  __main__.py  api.py
logpress/tests/e2e/: test_workflows.py
logsim/: __init__.py
logsim/cli/: interactive.py
notebooks/: README.md
results/: query_performance.json
scripts/: build_package.sh  logpress-interactive.sh  publish_docker.sh  publish_pypi.sh  publish_testpypi.sh  release.sh  test_package.sh
